cmake_minimum_required(VERSION 3.27)
project(Github_Auto_Follows)

set(CMAKE_CXX_STANDARD 23)

add_executable(Github_Auto_Follows
        "main.cpp"
        "Practice File/Sieve Information.cpp"
        "Header File/Sieve Information.h"
        "Header File/Information Input.h"
        "Practice File/Information Input.cpp"
)